<resources>
    <string name="hello_message">Hello World</string>
    <string name="app_name">Lab4</string>
    <string name="top_message" translatable="false">Look at my GUI!</string>
    <string name="ButtonText">Click here!</string>
    <string name="checkbox">Check this out!</string>
    <string name="switchOn">Switch On/Off</string>
    <string name="editText">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="hint">Just keep typing</string>
    <string name="switch_info">The switch is now on</string>
    <string name="todo" translatable="false">TODO</string>


    <string name="textAddress">Enter your email address: </string>
    <string name="typeAddress">Type email here</string>
    <string name="addressHint">john@example.com</string>
    <string name="passText">Type your password: </string>
    <string name="loginButton">Login</string>
    <string name="profileText">Your Profile</string>
    <string name="nameText">Your name: </string>
    <string name="typeName">Enter your name</string>
    <string name="nameHint">John Smith</string>
    <string name="emailText">Your email: </string>
    <string name="typeEmail">Enter your email</string>
    <string name="pictureText">Your picture</string>
    <string name="clickAbovePicture">Click the button above to take a picture</string>

    <string name="chatButton">Go to chat</string>
    <string name="sendButton">Send</string>
    <string name="receiveButton">Receive</string>
    <string name="typeHint">Type Here</string>
    
    <string name="finishButton">Hide</string>
    <string name="messageHere">Message Here</string>
    <string name="idequals">ID= </string>

</resources>