<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profileText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileText" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameText" />

    <EditText
        android:id="@+id/typeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/typeName"
        android:autofillHints="@string/app_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailText" />

    <EditText
        android:id="@+id/typeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeEmail"
        android:autofillHints="@string/app_name"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/pictureText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pictureText" />

    <ImageButton
        android:id="@+id/pictureButton"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:src="@android:drawable/picture_frame"
        android:contentDescription="@string/todo" />
</LinearLayout>